--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,36 +5,20 @@
     --bg-color-accent: #9333ea;
 }
 
+*::before,
+*::after {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    background-color: black;
+}
 body {
-    background: var(--background);
-    color: var(--foreground);
+    background-color: #000;
+    margin: 0;
+    padding: 0;
     font-family: Arial, Helvetica, sans-serif;
 }
 
-.shimmer {
-    position: relative;
-    overflow: hidden;
-    background: #2d2d2d;
-}
-
-.shimmer::after {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: -150%;
-    width: 150%;
-    height: 100%;
-    background: linear-gradient(
-        120deg,
-        transparent 0%,
-        rgba(255, 255, 255, 0.15) 50%,
-        transparent 100%
-    );
-    animation: shimmer-move 1.4s infinite;
-}
-
-@keyframes shimmer-move {
-    100% {
-        transform: translateX(150%);
-    }
+html {
+    scroll-behavior: smooth;
 }
