--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -12,8 +12,9 @@
     padding: 0;
     background-color: black;
 }
+html,
 body {
-    background-color: #000;
+    background-color: #111827;
     margin: 0;
     padding: 0;
     font-family: Arial, Helvetica, sans-serif;
